--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <array name="drawer_items">
         <item>Gallery</item>
+        <item>Nested example</item>
         <item>Stub Screen 1</item>
         <item>Stub Screen 2</item>
         <item>Stub Screen 3</item>
