Revamped View state restoration - Added abstract Parcelable Creators that store View state and Transitions. Each screen must now provide its own Parcelable Creator to store own fields. - Removed StateBlueprint interface in favour of TransitionScreen class - Replaced GsonParser with ScreenParser which simply casts Parcelable objects - Added BetterViewPresenter that has useful lifecycle methods and viewState restoration helper functions - Added ViewStateScreen example #closes 5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="stub_go_right">Go Right!</string>
     <string name="stub_go_up">Go Upwards!</string>
+    <string name="view_state_hint">Enter text to be preserved</string>
 
     <array name="drawer_items">
         <item>Gallery</item>
         <item>Nested example</item>
         <item>Transitions</item>
+        <item>View State example</item>
     </array>
 </resources>
